@@ -97,3 +97,85 @@
     ```
 
 ---
+
+## 5. Record Patterns
+- Enhance pattern matching capabilities by allowing deconstruction of record types.
+- Simplify the extraction of components from records in a concise manner.
+- Example:
+  ```java
+  record Point(int x, int y) {}
+    Object obj = new Point(10, 20);
+    if (obj instanceof Point(int x, int y)) {
+        System.out.println("X: " + x + ", Y: " + y);
+    }
+    ```
+- Can be used in `instanceof` checks and `switch` statements.
+- Example with switch:
+  ```java
+  Object obj = new Point(10, 20);
+    switch (obj) {
+        case Point(int x, int y) -> System.out.println("X: " + x + ", Y: " + y);
+        default -> System.out.println("Not a Point");
+    }
+    ```
+- Improves code readability and reduces boilerplate code when working with records.
+
+---
+## 6. Pattern Matching for switch (Standardized)
+- Extends pattern matching capabilities to `switch` statements.
+- Allows matching against types and deconstructing objects directly within `switch` cases.
+- Example:
+  ```java
+  Object obj = "Hello, World!";
+    switch (obj) {
+        case String s -> System.out.println("It's a string: " + s);
+        case Integer i -> System.out.println("It's an integer: " + i);
+        default -> System.out.println("Unknown type");
+    }
+  ```
+- Supports type patterns and record patterns.
+- Enhances code clarity and reduces the need for explicit casting.
+- Example with record patterns:
+  ```java
+  record Point(int x, int y) {}
+    Object obj = new Point(5, 10);
+    switch (obj) {
+        case Point(int x, int y) -> System.out.println("Point coordinates: (" + x + ", " + y + ")");
+        default -> System.out.println("Not a Point");
+    }
+  ```
+- Facilitates more expressive and maintainable code when dealing with multiple types.
+
+---
+## 7. Default UTF-8 Charset
+- Java 21 introduces UTF-8 as the default charset for standard APIs that previously used the platform's default charset.
+- This change ensures consistent behavior across different platforms and environments.
+- Affects APIs such as `String`, `Files`, and `InputStreamReader` that deal with character encoding.
+- Example:
+  ```java
+  String text = "Hello, World!";
+    byte[] bytes = text.getBytes(); // Uses UTF-8 by default in Java 21
+    String decodedText = new String(bytes); // Decodes using UTF-8 by default
+    System.out.println(decodedText);
+  ```
+- Reduces issues related to character encoding mismatches when reading or writing text data.
+- Developers can still specify a different charset if needed, but UTF-8 will be the default.
+
+---
+
+## 8. Generational ZGC and Performance Improvements
+- Java 21 enhances the Z Garbage Collector (ZGC) with generational capabilities.
+- Generational ZGC divides the heap into generations (young and old), optimizing garbage collection for different object lifetimes.
+- Improves performance by reducing pause times and increasing throughput for applications with varying object lifetimes.
+- Key Features:
+  - Concurrent marking and relocation of objects.
+  - Region-based memory management.
+  - Support for large heaps (up to several terabytes).
+- Example JVM options to enable ZGC:
+    ```bash
+    -XX:+UseZGC
+    -XX:ZCollectionInterval=1000
+    ```
+- Ideal for applications with high throughput and low latency requirements, such as real-time systems and large data processing applications.
+
+---
